# qa_guru_7_18

./: pyproject.toml
