[tool.poetry]
name = "qa-guru-7-18"
version = "0.1.0"
description = "HW-18"
authors = ["Ivan Khokhlov <xxx.mailbox73@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_7_18"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc3"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
